@@ -183,6 +183,9 @@ gpac/applications/testapps/beng_test/BifsEngineTester.dsp -text
 gpac/applications/testapps/beng_test/CmdLineTst.c -text
 gpac/applications/testapps/beng_test/rect-update.bt -text
 gpac/applications/testapps/beng_test/rect.bt -text
+gpac/applications/testapps/largefile/largefile.dsp -text
+gpac/applications/testapps/largefile/largefile.dsw -text
+gpac/applications/testapps/largefile/main.c -text
 gpac/applications/v4studio/V4CommandPanel.cpp -text
 gpac/applications/v4studio/V4CommandPanel.h -text
 gpac/applications/v4studio/V4FieldList.cpp -text
